syntax = "proto3";

option go_package = "/pb";

service REngine {
  rpc Next (NextRequest) returns (NextReply) {}
}

message NextRequest {
  int64 userID = 1;
  int64 sphereID = 2;
}

message NextReply {
  int64 nextUserID = 1;
}
